--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -32,7 +32,7 @@
   }
 
   textarea {
-    height: 15vh;
+    height: 20vh;
     resize: none;
   }
 
